--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -23,5 +23,4 @@
   template: src=nginx-empty.conf.j2 dest=/etc/nginx/nginx.conf mode=0644 backup=yes
   notify:
     - restart webserver
-  when: ansible_os_family == "RedHat" or ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
-
+  when: ansible_os_family == "RedHat"
