misp-feeds: use uri ansible module

--- a/tasks/misp-feeds.yml
+++ b/tasks/misp-feeds.yml
@@ -5,13 +5,23 @@
 
 ## FIXME! not idempotent, no way to list feeds with their status
 - name: enable feeds
-  command: "curl -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json' -H 'Accept: application/json' {{ misp_base_url }}/feeds/enable/{{ item }}"
+  uri:
+    url: "{{ misp_base_url }}/feeds/enable/{{ item }}"
+    method: POST
+    HEADER_Authorization: "{{ userkey }}"
+    HEADER_Accept: application/json
+    body_format: json
   with_items: "{{ misp_enable_feeds }}"
   register: enableresults
 #- debug: var=enableresults
 
 - name: disable feeds
-  command: "curl -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json' -H 'Accept: application/json' {{ misp_base_url }}/feeds/disable/{{ item }}"
+  uri:
+    url: "{{ misp_base_url }}/feeds/disable/{{ item }}"
+    method: POST
+    HEADER_Authorization: "{{ userkey }}"
+    HEADER_Accept: application/json
+    body_format: json
   with_items: "{{ misp_disable_feeds }}"
   register: disableresults
 #- debug: var=disableresults
