--- a/tasks/misp-feeds.yml
+++ b/tasks/misp-feeds.yml
@@ -10,7 +10,7 @@
     method: POST
     HEADER_Authorization: "{{ userkey }}"
     HEADER_Accept: application/json
-    body_format: json
+    HEADER_Content-Type: application/json
   with_items: "{{ misp_enable_feeds }}"
   register: enableresults
 #- debug: var=enableresults
@@ -21,7 +21,7 @@
     method: POST
     HEADER_Authorization: "{{ userkey }}"
     HEADER_Accept: application/json
-    body_format: json
+    HEADER_Content-Type: application/json
   with_items: "{{ misp_disable_feeds }}"
   register: disableresults
 #- debug: var=disableresults
