--- a/tasks/misp-feeds.yml
+++ b/tasks/misp-feeds.yml
@@ -9,9 +9,9 @@
     url: "{{ misp_base_url }}/feeds/enable/{{ item }}"
     method: POST
     headers:
-      - Authorization: "{{ userkey }}"
-      - Accept: application/json
-      - Content-Type: application/json
+      Authorization: "{{ userkey }}"
+      Accept: application/json
+      Content-Type: application/json
   with_items: "{{ misp_enable_feeds }}"
   register: enableresults
 #- debug: var=enableresults
@@ -21,9 +21,9 @@
     url: "{{ misp_base_url }}/feeds/disable/{{ item }}"
     method: POST
     headers:
-      - Authorization: "{{ userkey }}"
-      - Accept: application/json
-      - Content-Type: application/json
+      Authorization: "{{ userkey }}"
+      Accept: application/json
+      Content-Type: application/json
   with_items: "{{ misp_disable_feeds }}"
   register: disableresults
 #- debug: var=disableresults
