--- a/tasks/misp-add-users.yml
+++ b/tasks/misp-add-users.yml
@@ -18,7 +18,7 @@
 #    - name: set extra users
 #      command: "{{ misp_rootdir }}/app/Console/cake Password {{ item.u }} \"{{ item.p }}\""
 #      with_items: "{{ misp_webusers_list }}"
-#  when: misp_webusers_list is defined and misp_webusers_list != ""
+#  when: misp_webusers_list is defined and misp_webusers_list
 
 - include: misp-key-file.yml
 
