--- a/tasks/misp-feeds.yml
+++ b/tasks/misp-feeds.yml
@@ -5,7 +5,9 @@
 
 ## FIXME! not idempotent, no way to list feeds with their status
 - name: enable feeds
-  command: "curl -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json' -H 'Accept: application/json' {{ misp_base_url }}/feeds/enable/{{ item }}"
+  command: >
+    curl -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json'
+        -H 'Accept: application/json' {{ misp_base_url }}/feeds/enable/{{ item }}
 #  uri:
 #    url: "{{ misp_base_url }}/feeds/enable/{{ item }}"
 #    method: POST
@@ -18,7 +20,9 @@
 #- debug: var=enableresults
 
 - name: disable feeds
-  command: "curl -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json' -H 'Accept: application/json' {{ misp_base_url }}/feeds/disable/{{ item }}"
+  command: >
+    curl -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json'
+        -H 'Accept: application/json' {{ misp_base_url }}/feeds/disable/{{ item }}
 #  uri:
 #    url: "{{ misp_base_url }}/feeds/disable/{{ item }}"
 #    method: POST
