--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -87,3 +87,7 @@ php_ini: /etc/php.ini
 fpm_user: nobody
 
 gnupg_privdir: "{{ misp_rootdir }}/.gnupg"
+
+ssl_user: root
+ssl_dir: /etc/pki/tls/certs
+ssl_privatedir: /etc/pki/tls/private
