missing apacheetc variable

--- a/vars/Ubuntu-18.04.yml
+++ b/vars/Ubuntu-18.04.yml
@@ -87,6 +87,7 @@ gnupg_privdir: "{{ misp_rootdir }}/.gnupg/private-keys-v1.d"
 
 mispmodules_libyarapath: /usr/local/lib/python3.6/dist-packages/usr/lib
 
+apacheetc: /etc/apache2
 ssl_user: ssl-cert
 ssl_dir: /etc/ssl
 ssl_privatedir: /etc/ssl/private
