--- a/vars/Ubuntu-12.04.yml
+++ b/vars/Ubuntu-12.04.yml
@@ -83,6 +83,7 @@ fpm_user: www-data
 
 gnupg_privdir: "{{ misp_rootdir }}/.gnupg"
 
+apacheetc: /etc/apache2
 ssl_user: ssl-cert
 ssl_dir: /etc/ssl
 ssl_privatedir: /etc/ssl/private
