--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .vagrant
 *.retry
+.kitchen
+inspec.lock
 # https://github.com/github/gitignore/blob/master/Global/Vim.gitignore
 # Swap
 [._]*.s[a-v][a-z]
