--- a/tasks/testing.yml
+++ b/tasks/testing.yml
@@ -115,3 +115,10 @@
     owner: "{{ misp_testing_user }}"
     state: link
     force: yes
+
+- name: allow self-signed certificates in curl_tests.sh
+  replace:
+    dest: /var/www/MISP/tests/curl_tests.sh
+    regexp: '^curl -([iH].)'
+    replace: '^curl -k -\1'
+    backup: yes
